# ProjectV

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  вфыв.txt
legacy/: CMakeLists.txt
legacy/docs/latest/: TODO.md
legacy/docs/latest/architecture/academic/: 01_project_defense_model.md  02_mvp_defense_demo.md
legacy/docs/latest/architecture/theory/: 00_overview.md  01_ecs.md  02_memory-layout.md  04_memory-arenas.md
legacy/docs/latest/libraries/draco/: 01_old.md  01_reference.md  02_integration.md
legacy/docs/latest/libraries/fastgltf/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/flecs/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/freetype/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/glaze/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/glm/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/joltphysics/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/meshoptimizer/: 02_integration.md
legacy/docs/latest/libraries/miniaudio/: 01_reference.md
legacy/docs/latest/libraries/rmlui/: 01_reference.md
legacy/docs/latest/libraries/sdl/: 02_integration.md
legacy/docs/latest/libraries/slang/: 01_reference.md  02_integration.md
legacy/docs/latest/libraries/tracy/: 01_reference.md
legacy/docs/latest/libraries/vulkan/: 01_reference.md
legacy/docs/latest/libraries/zstd/: 01_reference.md  02_integration.md
legacy/docs/latest/philosophy/01_foundation/: 01_manifesto.md  02_anti-patterns.md  03_decision-making.md  04_evil-hacks-philosophy.md  05_compiler-philosophy.md  07_memory-philosophy.md  08_error-handling.md  09_data-layout-philosophy.md  10_debugging-philosophy.md
legacy/docs/latest/philosophy/02_paradigms/: 01_zero-cost-abstractions.md  02_dod-philosophy.md  03_ecs-philosophy.md  04_concurrency-philosophy.md  05_data-flow-philosophy.md  06_strings-philosophy.md
legacy/docs/latest/philosophy/03_domain/: 02_vulkan-philosophy.md  05_math-and-space.md  06_time-and-determinism.md
legacy/docs/latest/standards/cmake/: 01_basics-structure.md  04_advanced-optimization.md
legacy/docs/latest/standards/cpp/: 00_language-standard.md
legacy/docs/old 2/: improvement_plan.md  map.md  map_new.md
legacy/docs/old 2/architecture/: 00_roadmap_and_scope.md  README.md  modern-vulkan-guide.md  voxel-pipeline.md
legacy/docs/old 2/examples/: architecture_modern_vulkan.cpp  architecture_resource_manager.cpp  black_window.cpp  fastgltf_load_mesh.cpp  fastgltf_load_textures.cpp  flecs_sdl.cpp  glm_transform.cpp  glm_voxel_chunk.cpp  imgui_sdl_vulkan.cpp  jolt_sdl.cpp  miniaudio_lowlevel.cpp  miniaudio_sdl.cpp  sdl_flecs_integration.cpp  vulkan_compute_uniform.cpp  vulkan_triangle.cpp
legacy/docs/old 2/guides/cmake/: 00_overview.md  (+3 more)
legacy/docs/old 2/philosophy/: 06_vulkan-philosophy.md  README_new.md
legacy/docs/old 2/tutorials/: 01_first-scene.md
legacy/docs/old 3/: README.md
legacy/docs/old 3/philosophy/: 01_manifesto.md  09_testing-philosophy.md  11_evil-hacks-philosophy.md
legacy/docs/old 4/: map.md
legacy/docs/old 4/architecture/: README.md
legacy/docs/old 5/: map.md
legacy/docs/old 5/architecture/: 00_roadmap_and_scope.md  README.md
legacy/docs/old 5/philosophy/: 00_overview.md  04_ecs-philosophy.md
legacy/docs/old 6/: README.md  map.md
legacy/docs/old 6/architecture/: README.md  core-loop.md  flecs-vulkan-bridge.md  jolt-vulkan-bridge.md  resource-management.md
legacy/docs/old 6/examples/: CMakeLists.txt  architecture_core_loop.cpp  architecture_flecs_vulkan.cpp  architecture_voxel_pipeline.cpp  black_window.cpp  fastgltf_animations.cpp  fastgltf_materials.cpp  jolt_hello.cpp  miniaudio_playback.cpp  miniaudio_streaming.cpp  sdl_multi_window_editor.cpp  sdl_window.cpp  vma_buffer.cpp  volk_init.cpp  vulkan_triangle.cpp
legacy/docs/old 6/fastgltf/: README.md  concepts.md  integration.md  projectv-integration.md  quickstart.md
legacy/docs/old 6/flecs/: concepts.md  integration.md  quickstart.md  troubleshooting.md
legacy/docs/old 6/glm/: concepts.md  integration.md  troubleshooting.md
legacy/docs/old 6/imgui/: README.md  concepts.md  integration.md  troubleshooting.md
legacy/docs/old 6/joltphysics/: concepts.md  integration.md  projectv-integration.md  troubleshooting.md
legacy/docs/old 6/miniaudio/: advanced-topics.md  api-reference.md  concepts.md  decision-trees.md  glossary.md  integration.md  performance.md  troubleshooting.md  use-cases.md  voxel-audio-patterns.md
legacy/docs/old 6/philosophy/: 03_dod-philosophy.md
legacy/docs/old 6/sdl/: README.md  concepts.md  glossary.md  integration.md  performance.md  projectv-integration.md  quickstart.md  use-cases.md
legacy/docs/old 6/tracy/: README.md  api-reference.md  glossary.md  integration.md  projectv-integration.md
legacy/docs/old 6/tutorials/: 00_overview.md
legacy/docs/old 6/vma/: README.md  glossary.md  integration.md  quickstart.md  troubleshooting.md  use-cases.md
legacy/docs/old 6/volk/: README.md  api-reference.md  concepts.md  decision-trees.md  integration.md  performance.md  use-cases.md
legacy/docs/old 6/vulkan/: README.md  performance.md  projectv-integration.md  use-cases.md
legacy/docs/old/architecture/: README.md  logging_system.md  memory_manager.md  profiling_integration.md
legacy/docs/old/philosophy/: README.md
src/: AppUpdate.cpp  AppUpdate.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  SceneResources.cpp  SceneResources.hpp  Types.cpp  Types.hpp  VoxelMaterials.cpp  VoxelMaterials.hpp  VoxelWorld.cpp  VoxelWorld.hpp  VulkanBootstrap.cpp  VulkanBootstrap.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanInit.cpp  VulkanInit.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  main.cpp
src/shaders/: triangle.comp  triangle.frag  triangle.vert  voxel.frag  voxel.vert
(+642 files in other folders)
